--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,6 +128,7 @@ jobs:
       - name: 'Install prerequisite'
 #         sudo dpkg --add-architecture i386
         run: |
+          sudo add-apt-repository ppa:jan-koester/pipewiremaster
           sudo apt-get update
           sudo apt-get install \
            build-essential checkinstall cmake git libmbedtls-dev libasound2-dev libavcodec-dev libavdevice-dev \
