--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,14 @@ set(obs-rtspserver_HEADERS
 	rtsp_properties.h
 	rtsp_output_helper.h
 	)
+
+set(OBS_RTSPSERVER_VERSION_MAJOR 2)
+set(OBS_RTSPSERVER_VERSION_MINOR 1)
+set(OBS_RTSPSERVER_VERSION_PATCH 0)
+set(OBS_RTSPSERVER_VERSION_STRING "${OBS_RTSPSERVER_VERSION_MAJOR}.${OBS_RTSPSERVER_VERSION_MINOR}.${OBS_RTSPSERVER_VERSION_PATCH}")
+add_definitions(-DVERSION_STRING="${OBS_RTSPSERVER_VERSION_STRING}")
 	
 if(WIN32)
-	set(OBS_RTSPSERVER_VERSION_MAJOR 2)
-	set(OBS_RTSPSERVER_VERSION_MINOR 0)
-	set(OBS_RTSPSERVER_VERSION_PATCH 6)
-	set(OBS_RTSPSERVER_VERSION_STRING "2.0.6")
 	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/rtspoutput.rc.in ${CMAKE_CURRENT_SOURCE_DIR}/rtspoutput.rc)
 endif()
 
@@ -70,7 +72,7 @@ else()
 	set_target_properties(obs-rtspserver
 			PROPERTIES
 			FOLDER "plugins"
-			VERSION "2.0.6"
+			VERSION "${OBS_RTSPSERVER_VERSION_STRING}"
 			PRODUCTNAME "OBS RTSP Server Plugin")
 endif()
 
