--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,37 +15,37 @@ env:
   DEPS_VERSION_WIN: '2019'
   
 jobs:
-  get_tag:
-    name: '01 - Get latest version'
+  get_obs_tag:
+    name: '01 - Get obs-studio git info'
     runs-on: [ubuntu-latest]
     steps:
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
           repository: obsproject/obs-studio
-          path: 'obs-studio'
           fetch-depth: 0
           submodules: 'recursive'
           
       - name: 'Get OBS-Studio git info'
         shell: bash
-        working-directory: 'obs-studio'
         run: |
           git fetch --prune --unshallow
           echo OBS_GIT_BRANCH=`git rev-parse --abbrev-ref HEAD` >> $GITHUB_ENV
           echo OBS_GIT_HASH=`git rev-parse --short HEAD` >> $GITHUB_ENV
           echo OBS_GIT_TAG=`git describe --tags --abbrev=0` >> $GITHUB_ENV
           
+  get_plugin_tag:
+    name: '01 - Get plugin git info'
+    runs-on: [ubuntu-latest]
+    steps:
       - name: 'Checkout plugin'
         uses: actions/checkout@v2
         with:
-          path: 'plugin'
           fetch-depth: 0
           submodules: 'recursive'
           
-      - name: 'Get plugin tag'
+      - name: 'Get plugin git info'
         shell: bash
-        working-directory: 'plugin'
         run: |
           export GIT_TAG=${GITHUB_REF/refs\/tags\//}
           export TAG_VERSION=${GIT_TAG#v}
@@ -56,7 +56,7 @@ jobs:
   clang_check:
     name: '02 - Code Format Check'
     runs-on: [ubuntu-latest]
-    needs: [get_tag]
+    needs: [get_obs_tag, get_plugin_tag]
     steps:
       - name: 'Checkout plugin ${{ env.GIT_TAG }}'
         uses: actions/checkout@v2.3.3
