--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,12 @@ env:
   DEPS_VERSION_MAC: '2021-08-17'
   DEPS_HASH_MAC: 'fc6b356572c4703d56f5b2deb98e46cddffb29a0d36c988702dd76329efe7072'
   DEPS_VERSION_WIN: '2019'
+  OBS_GIT_BRANCH: ''
+  OBS_GIT_HASH: ''
+  OBS_GIT_TAG: ''
+  GIT_TAG: ''
+  TAG_VERSION: ''
+  TAG_FVERSION: ''
   
 jobs:
   get_obs_tag:
@@ -23,11 +29,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: obsproject/obs-studio
+          path: 'obs-studio'
           fetch-depth: 0
           submodules: 'recursive'
           
       - name: 'Get OBS-Studio git info'
         shell: bash
+        working-directory: 'obs-studio'
         run: |
           echo OBS_GIT_BRANCH=`git rev-parse --abbrev-ref HEAD` >> $GITHUB_ENV
           echo OBS_GIT_HASH=`git rev-parse --short HEAD` >> $GITHUB_ENV
@@ -40,11 +48,13 @@ jobs:
       - name: 'Checkout plugin'
         uses: actions/checkout@v2
         with:
+          path: 'plugin'
           fetch-depth: 0
           submodules: 'recursive'
           
       - name: 'Get plugin git info'
         shell: bash
+        working-directory: 'plugin'
         run: |
           export GIT_TAG=${GITHUB_REF/refs\/tags\//}
           export TAG_VERSION=${GIT_TAG#v}
