--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,7 @@ jobs:
           $env:WindowsQtVersion = "${{ env.QT_VERSION_WIN }}"
           $env:ObsVersion = "${{ needs.get_obs_info.outputs.git_tag }}"
           $env:NSISVersion = "${{ env.NSIS_VERSION_WIN }}"
-          ${{ github.workspace }}/plugin/CI/windows/01_install_dependencies.ps1 -BuildArch ${{ matrix.arch }}-bit -NoChoco
+          CI/windows/01_install_dependencies.ps1 -BuildArch ${{ matrix.arch }}-bit -NoChoco -InstallList "obs-deps","qt-deps","obs-studio"
         
       - name: 'Build libobs and obs-frontend-api'
         working-directory: 'plugin'
@@ -123,7 +123,7 @@ jobs:
           $env:WindowsQtVersion = "${{ env.QT_VERSION_WIN }}"
           $env:ObsVersion = "${{ needs.get_obs_info.outputs.git_tag }}"
           $env:NSISVersion = "${{ env.NSIS_VERSION_WIN }}"
-          ${{ github.workspace }}/plugin/CI/windows/02_build_obs_libs.ps1 -BuildArch "${{ matrix.arch }}-bit"
+          CI/windows/02_build_obs_libs.ps1 -BuildArch "${{ matrix.arch }}-bit"
         
       - name: 'Build plugin'
         working-directory: 'plugin'
@@ -132,7 +132,7 @@ jobs:
           $env:WindowsQtVersion = "${{ env.QT_VERSION_WIN }}"
           $env:ObsVersion = "${{ needs.get_obs_info.outputs.git_tag }}"
           $env:NSISVersion = "${{ env.NSIS_VERSION_WIN }}"
-          ${{ github.workspace }}/plugin/CI/windows/03_build_plugin.ps1 -BuildArch "${{ matrix.arch }}-bit"
+          CI/windows/03_build_plugin.ps1 -BuildArch "${{ matrix.arch }}-bit"
         
       - name: 'Create build artifact'
         working-directory: 'plugin'
@@ -141,7 +141,7 @@ jobs:
           $env:WindowsQtVersion = "${{ env.QT_VERSION_WIN }}"
           $env:ObsVersion = "${{ needs.get_obs_info.outputs.git_tag }}"
           $env:NSISVersion = "${{ env.NSIS_VERSION_WIN }}"
-          ${{ github.workspace }}/plugin/CI/windows/04_package_plugin.ps1 -BuildArch "${{ matrix.arch }}-bit"
+          CI/windows/04_package_plugin.ps1 -BuildArch "${{ matrix.arch }}-bit"
         
       - name: 'Upload build Artifact'
         uses: actions/upload-artifact@v2
@@ -172,6 +172,15 @@ jobs:
         with:
           name: '${{ env.PRODUCT_NAME }}-windows-32'
           path: 'plugin'
+          
+      - name: "Install Dependencies"
+        working-directory: 'plugin'
+        run: |
+          $env:WindowsDepsVersion = "${{ env.DEPS_VERSION_WIN }}"
+          $env:WindowsQtVersion = "${{ env.QT_VERSION_WIN }}"
+          $env:ObsVersion = "${{ needs.get_obs_info.outputs.git_tag }}"
+          $env:NSISVersion = "${{ env.NSIS_VERSION_WIN }}"
+          CI/windows/01_install_dependencies.ps1 -BuildArch ${{ matrix.arch }}-bit -NoChoco -InstallList "nsis"
           
       - name: 'Build NSIS installer'
         working-directory: 'plugin'
