--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,7 +191,7 @@ jobs:
       - name: 'Upload build Artifact'
         uses: actions/upload-artifact@v2
         with:
-          name: '${{ env.PRODUCT_NAME }}-windows-release'
+          name: '${{ env.PRODUCT_NAME }}-*-windows-release'
           path: '${{ github.workspace }}/plugin/${{ env.PRODUCT_NAME }}-windows-all-installer.exe'
 
   linux_build:
