--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,8 +191,8 @@ jobs:
       - name: 'Upload build Artifact'
         uses: actions/upload-artifact@v2
         with:
-          name: '${{ env.PRODUCT_NAME }}-*-windows-release'
-          path: '${{ github.workspace }}/plugin/${{ env.PRODUCT_NAME }}-windows-all-installer.exe'
+          name: '${{ env.PRODUCT_NAME }}-windows-release'
+          path: '${{ github.workspace }}/plugin/${{ env.PRODUCT_NAME }}-*-windows-all-installer.exe'
 
   linux_build:
     name: 'Linux 64bit'
